--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
+  font_awesome_flutter: ^10.8.0
+  flutter_svg: ^2.2.0
+  intl_phone_field: ^3.2.0
+  google_nav_bar: ^5.0.7
+  receive_sharing_intent: ^1.8.1
+  restart_app: ^1.3.2
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  path_provider: ^2.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator:
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,3 +100,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_intl:
+  enabled: true
