--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   path_provider: ^2.1.5
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  country_picker: ^2.0.27
+  url_launcher: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
