--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,11 @@ dependencies:
   flutter_bloc: ^9.1.1
   country_picker: ^2.0.27
   url_launcher: ^6.3.1
+  google_fonts: ^6.2.1
+  cached_network_image: ^3.4.1
+  google_mlkit_text_recognition: ^0.15.0
+  #google_mlkit_text_recognition_latin: ^0.11.0
+  #google_mlkit_commons: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
