--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,51 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Common and Useful
+    always_use_package_imports: true
+    avoid_empty_else: true
+    avoid_init_to_null: true
+    avoid_print: false
+    avoid_returning_null_for_future: true
+    avoid_unnecessary_containers: true
+    avoid_web_libraries_in_flutter: true
+    cancel_subscriptions: true
+    close_sinks: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_final_fields: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    unnecessary_const: true
+    unnecessary_final: false # Sometimes useful to allow for reassignments
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # Formatting and Style
+    prefer_single_quotes: true
+    sort_child_properties_last: true
+    sort_constructors_first: true
+    use_super_parameters: true
+    lines_longer_than_80_chars: false
+
+    # Null Safety & Type Safety
+    always_declare_return_types: true
+    avoid_returning_null: true
+    avoid_types_on_closure_parameters: false
+    prefer_typing_uninitialized_variables: true
+    type_annotate_public_apis: true
+
+    # Flutter-specific
+    use_key_in_widget_constructors: true
+    sized_box_for_whitespace: true
+    avoid_positional_boolean_parameters: true
+    flutter_style_todos: true
+
+    # Performance
+    no_logic_in_create_state: true
+    avoid_redundant_argument_values: true
+
+    # Readability
+    annotate_overrides: true
+    unnecessary_this: true
