--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_fonts: ^6.2.1
   cached_network_image: ^3.4.1
   google_mlkit_text_recognition: ^0.15.0
+  meta: ^1.16.0
   #google_mlkit_text_recognition_latin: ^0.11.0
   #google_mlkit_commons: ^0.11.0
 dev_dependencies:
