--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
-  flutter_svg: ^2.2.0
   intl_phone_field: ^3.2.0
   google_nav_bar: ^5.0.7
   receive_sharing_intent: ^1.8.1
@@ -50,10 +49,12 @@ dependencies:
   flutter_bloc: ^9.1.1
   country_picker: ^2.0.27
   url_launcher: ^6.3.1
-  google_fonts: ^6.2.1
   cached_network_image: ^3.4.1
   google_mlkit_text_recognition: ^0.15.0
   meta: ^1.16.0
+  google_fonts: ^6.2.1
+  flutter_launcher_icons: ^0.14.4
+  image: ^4.5.4
   #google_mlkit_text_recognition_latin: ^0.11.0
   #google_mlkit_commons: ^0.11.0
 dev_dependencies:
@@ -68,6 +69,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  change_app_package_name: ^1.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -83,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/app_icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
