--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,9 @@ dependencies:
   cached_network_image: ^3.4.1
   google_mlkit_text_recognition: ^0.15.0
   meta: ^1.16.0
-  google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.14.4
   image: ^4.5.4
-  #google_mlkit_text_recognition_latin: ^0.11.0
-  #google_mlkit_commons: ^0.11.0
+  in_app_review: ^2.0.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
